<resources>
    <string name="app_name">Gym O\' Clock</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Gym O\' Clock</string>
    <string name="nav_header_subtitle">Work Out</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_menu">Menu</string>
    <string name="item_workout">Workout</string>
    <string name="item_calendar">Calendar</string>
    <string name="item_slideshow">Slideshow</string>
    <string name="menu_muscle_group">Muscle Group</string>
    <string name="item_target_group">Target Group</string>

    <string name="add_layout_button">Add Layout</string>
    <string name="manipulate_timers">Start or Pause Time</string>

    <!--  ______________add_activity layout_________________  -->
    <string name="exercise_name">Exercise Name</string>
    <string name="exercise_time">Exercise Time</string>
    <string name="rest_time">Rest Time</string>
    <string name="play_pause_button">PlayPause Button</string>
    <string name="exercise_settings_button">Exercise Settings</string>
    <string name="remove_view">Remove View</string>
    <string name="edit_view">Edit View</string>
    <string name="rounds_text">ROUNDS</string>
    <string name="rounds_edit">0</string>
    <string name="total_time">Total Time</string>
    <string name="initial_remaining_time">-</string>
    <string name="prepare_for_workout"> </string>
    <string name="weight">weight</string>
    <string name="reps">reps</string>
    <!--  __________________________________________________  -->
    <!--  ________________Navigation Drawer_________________  -->
    <string name="open">Open</string>
    <string name="closed">Closed</string>
    <!--  __________________________________________________  -->
    <!--  ________________edit_workout layout_______________  -->
    <string name="edit_info">Edit Workout Info</string>
    <string name="edit_exercise_name">Exercise Name</string>
    <string name="edit_workout_timer">Workout Time</string>
    <string name="edit_rest_timer">Rest Time</string>
    <!--  __________________________________________________  -->
    <!--  ___________delete_rename_workout layout___________  -->
    <string name="edit_indicator">Edit</string>
    <string name="delete_workout">Delete</string>
    <!--  __________________________________________________  -->
    <!--  ______________add_new_workout layout______________  -->
    <string name="add_workout">Add new workout</string>
    <string name="workout_name">Workout Name</string>
    <string name="add_workout_button">Add</string>
    <!--  __________________________________________________  -->
    <!--  _____________________General______________________  -->
    <string name="cancel_button">Cancel</string>
    <string name="ok_button">OK</string>
    <string name="next_button">Next</string>
    <string name="rename">Rename</string>
    <string name="content_description_images">Image</string>
    <!--  __________________________________________________  -->
    <!--  _________________Timer Text Speak_________________  -->
    <string name="workout_start">START</string>
    <string name="workout_rest">Rest</string>
    <string name="exercise_paused">Exercise paused</string>
    <string name="rest_paused">Rest paused</string>
    <string name="workout_stopped">Workout stopped</string>
    <string name="rest_interval">Rest interval</string>
    <string name="workout_completed">Workout completed</string>
    <!--  __________________________________________________  -->

    <string name="delete_exercise_dialog_text">Delete this exercise?</string>

    <!--  __________________________________________________  -->
    <!--  ______________exercise_number_pickers_____________  -->
    <string name="minutes">MIN</string>
    <string name="seconds">SEC</string>
    <string name="setNumberPicker">Set</string>
    <string name="digital_format">00:00</string>
    <!--  __________________________________________________  -->

    <!--  __________________________________________________  -->
    <!--  __________dialog_calendar_workout_details_________  -->
    <string name="calendar_start_time_string">START TIME</string>
    <string name="calendar_end_time_string">END TIME</string>
    <string name="calendar_workout_name_string">WORKOUT NAME</string>
    <string name="calendar_total_time_string">TOTAL TIME</string>
    <string name="calendar_total_working_time_string">TOTAL WORKING TIME</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!--  __________________________________________________  -->
    <!--  _______________________Settings___________________  -->
    <string name="settings_workout">Workout</string>
    <string name="settings_add_workout">Add Workout</string>
    <string name="settings_calendar">Calendar</string>
    <string name="settings_settings">Settings</string>

    <string name="settings_set_prepare_time">Set Prepare Timer</string>
    <string name="settings_global_work_time">Set Work Timers</string>
    <string name="settings_global_rest_time">Set Rest Timers</string>
    <string name="settings_voice_assist">Voice Assist Helper</string>
    <string name="settings_animations">Animations</string>

    <string name="settings_enable_voice_assist">Enable Voice Assistant</string>
    <string name="settings_disable_voice_assist">Disable Voice Assistant</string>
    <string name="settings_volume_control">Volume Control</string>
    <string name="settings_test_button_play">Play</string>
    <string name="settings_test_button_stop">Stop</string>
    <string name="settings_test_button_text">
        You can adjust the volume of voice assistant at any time, by scrolling the bar above. While you have pressed the
        PLAY button, you can hear the adjustments on real time.
    </string>

    <string name="settings_enable_all_animations">Enable All Animations</string>
    <string name="settings_disable_all_animations">Disable All Animations</string>
    <string name="settings_enable_recycler_view_animations">Enable Layout Animations</string>
    <string name="settings_disable_recycler_view_animations">Disable Layout Animations</string>
    <string name="settings_enable_clock_animations">Enable Clock Animations</string>
    <string name="settings_disable_clock_animations">Disable Clock Animations</string>
    <!--  __________________________________________________  -->

    <!--  __________________________________________________  -->
    <!--  ____________________Screening DB__________________  -->
    <string name="screeningDB_ask_dialog">Save workout details?\nYou won\'t be able to exit the screen.</string>
    <string name="screeningDB_button_next">Next</string>
    <string name="screeningDB_button_set">Set</string>
    <string name="no_details_saved_text">No details saved for</string>
    <string name="insert_details_button_text">Insert</string>
    <!--  __________________________________________________  -->

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <!--  __________________________________________________  -->
</resources>