<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item android:title="@string/menu_menu">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_workout"
                    android:icon="@drawable/ic_menu_camera"
                    android:title="@string/item_workout" />
                <item
                    android:id="@+id/nav_calendar"
                    android:icon="@drawable/ic_menu_gallery"
                    android:title="@string/item_calendar" />
                <item
                    android:id="@+id/nav_slideshow"
                    android:icon="@drawable/ic_menu_slideshow"
                    android:title="@string/item_slideshow" />
            </group>
        </menu>
    </item>

    <item android:title="@string/menu_muscle_group">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_muscle_group"
                    android:icon="@drawable/ic_menu_camera"
                    android:title="@string/item_target_group" />

                <item
                    android:id="@+id/nav_muscle_group1"
                    android:icon="@drawable/ic_menu_camera"
                    android:title="@string/item_target_group" />

                <item
                    android:id="@+id/nav_muscle_group2"
                    android:icon="@drawable/ic_menu_camera"
                    android:title="@string/item_target_group" />
            </group>
        </menu>
    </item>
</menu>