<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_workout">

    <fragment
        android:id="@+id/nav_workout"
        android:name="com.gym.o.gymoclock.ui.workout.WorkoutFragment"
        android:label="@string/item_workout"
        tools:layout="@layout/fragment_workout" />

    <fragment
        android:id="@+id/nav_calendar"
        android:name="com.gym.o.gymoclock.ui.calendar.CalendarFragment"
        android:label="@string/item_calendar"
        tools:layout="@layout/fragment_calendar" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.gym.o.gymoclock.ui.settings.SettingsFragment"
        android:label="@string/item_slideshow"
        tools:layout="@layout/fragment_settings" />
</navigation>