<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/dialogs_layout_background">

    <ImageButton
        android:id="@+id/animations_cancel_button"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginEnd="4dp"
        android:background="@drawable/ic_remove_view"
        android:backgroundTint="@color/custom_text_color"
        android:contentDescription="@string/cancel_button"
        android:duplicateParentState="false"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/all_animations"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:checked="true"
        android:text="@string/settings_disable_all_animations"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/animations_cancel_button"
        app:layout_constraintVertical_bias="0.118" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/recycler_view_animations"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="36dp"
        android:checked="true"
        android:text="@string/settings_disable_recycler_view_animations"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/all_animations" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/clocks_animations"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="36dp"
        android:checked="true"
        android:text="@string/settings_disable_clock_animations"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recycler_view_animations" />
</androidx.constraintlayout.widget.ConstraintLayout>