<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/edit_workout_layout_background"
    android:gravity="center"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:elevation="15dp"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/edit_info"
            android:textColor="@color/custom_text_color"
            android:textSize="19sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/exercise_name_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="5dp"
            android:autofillHints="hint:name"
            android:hint="@string/edit_exercise_name"
            android:inputType="text"
            android:padding="15dp"
            android:textAlignment="center"
            android:textColor="@color/custom_text_color"
            android:textColorHint="@color/custom_text_color"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/work_time_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="15dp"
            android:autofillHints="hint:45sec"
            android:hint="@string/edit_workout_timer"
            android:inputType="number"
            android:padding="15dp"
            android:textAlignment="center"
            android:textColor="@color/custom_text_color"
            android:textColorHint="@color/custom_text_color"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/rest_time_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="15dp"
            android:autofillHints="hint:30sec"
            android:hint="@string/edit_rest_timer"
            android:inputType="number"
            android:padding="15dp"
            android:textAlignment="center"
            android:textColor="@color/custom_text_color"
            android:textColorHint="@color/custom_text_color"
            android:textSize="18sp"
            android:textStyle="bold" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="16dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/cancel_button"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="90dp"
                android:layout_height="match_parent"
                android:layout_gravity="start"
                android:background="@color/custom_transparent"
                android:text="@string/cancel_button"
                android:textColor="@color/custom_text_color"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/ok_button"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="90dp"
                android:layout_height="match_parent"
                android:layout_gravity="start"
                android:background="@color/custom_transparent"
                android:text="@string/ok_button"
                android:textColor="@color/custom_text_color"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

</LinearLayout>