<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center">

    <TableRow
        android:gravity="center"
        android:padding="5dp">

        <TextView
            android:id="@+id/calendar_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="16sp" />
    </TableRow>

    <TableRow android:padding="5dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10sp"
            android:text="@string/calendar_start_time_string"
            android:textAlignment="textStart"
            android:textColor="@color/white"
            android:textSize="16sp" />


        <TextView
            android:id="@+id/calendar_start_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10sp"
            android:textAlignment="textStart"
            android:textColor="@color/white"
            android:textSize="16sp" />

    </TableRow>

    <TableRow android:padding="5dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10sp"
            android:text="@string/calendar_end_time_string"
            android:textAlignment="textStart"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/calendar_end_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10sp"
            android:textAlignment="textStart"
            android:textColor="@color/white"
            android:textSize="16sp" />
    </TableRow>

    <TableRow android:padding="5dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10sp"
            android:text="@string/calendar_workout_name_string"
            android:textAlignment="textStart"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/calendar_workout_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10sp"
            android:textAlignment="textStart"
            android:textColor="@color/white"
            android:textSize="16sp" />
    </TableRow>

    <TableRow android:padding="5dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10sp"
            android:text="@string/calendar_total_time_string"
            android:textAlignment="textStart"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/calendar_total_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10sp"
            android:textAlignment="textStart"
            android:textColor="@color/white"
            android:textSize="16sp" />
    </TableRow>

    <TableRow android:padding="5dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10sp"
            android:text="@string/calendar_total_working_time_string"
            android:textAlignment="textStart"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/calendar_total_working_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10sp"
            android:textAlignment="textStart"
            android:textColor="@color/white"
            android:textSize="16sp" />
    </TableRow>

</TableLayout>