<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="3dp"
    app:cardCornerRadius="10dp"
    app:cardElevation="8dp"
    app:cardMaxElevation="5dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraint_layout"
        android:layout_width="match_parent"
        android:layout_height="145dp"
        android:background="@drawable/layouts_background">

        <TextView
            android:id="@+id/exercise_name"
            android:layout_width="200dp"
            android:layout_height="25dp"
            android:layout_gravity="center"
            android:hint="@string/exercise_name"
            android:importantForAutofill="no"
            android:textAlignment="center"
            android:textColor="@color/custom_text_color"
            android:textColorHint="@color/custom_text_color"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.007" />

        <TextView
            android:id="@+id/countdown_work"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textColor="@color/custom_text_color"
            app:layout_constraintBottom_toBottomOf="@+id/exercise_img"
            app:layout_constraintEnd_toEndOf="@+id/exercise_img"
            app:layout_constraintStart_toStartOf="@+id/exercise_img"
            app:layout_constraintTop_toTopOf="@+id/exercise_img" />

        <TextView
            android:id="@+id/countdown_rest"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textColor="@color/custom_text_color"
            app:layout_constraintBottom_toBottomOf="@+id/rest_img"
            app:layout_constraintEnd_toEndOf="@+id/rest_img"
            app:layout_constraintStart_toStartOf="@+id/rest_img"
            app:layout_constraintTop_toTopOf="@+id/rest_img" />

        <ImageButton
            android:id="@+id/exercise_img"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="end"
            android:background="@drawable/ic_work_clock"
            android:contentDescription="@string/exercise_time"
            android:duplicateParentState="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/play_pause"
            app:layout_constraintHorizontal_bias="0.023"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/exercise_name"
            app:layout_constraintVertical_bias="0.194" />

        <ImageButton
            android:id="@+id/rest_img"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="start"
            android:background="@drawable/ic_rest_clock"
            android:contentDescription="@string/rest_time"
            android:duplicateParentState="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.877"
            app:layout_constraintStart_toEndOf="@+id/play_pause"
            app:layout_constraintTop_toBottomOf="@+id/exercise_name"
            app:layout_constraintVertical_bias="0.185" />

        <ImageButton
            android:id="@+id/play_pause"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/ic_play_pause_button"
            android:contentDescription="@string/play_pause_button"
            android:duplicateParentState="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/exercise_name"
            app:layout_constraintStart_toStartOf="@+id/exercise_name"
            app:layout_constraintTop_toBottomOf="@+id/exercise_name"
            app:layout_constraintVertical_bias="0.287" />

        <ImageButton
            android:id="@+id/remove_view"
            android:layout_width="38dp"
            android:layout_height="38dp"
            android:background="@drawable/ic_remove_view"
            android:backgroundTint="@color/custom_text_color"
            android:contentDescription="@string/remove_view"
            android:duplicateParentState="true"
            app:layout_constraintBottom_toTopOf="@+id/exercise_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <ImageButton
            android:id="@+id/edit_view"
            android:layout_width="38dp"
            android:layout_height="38dp"
            android:background="@drawable/ic_edit_view"
            android:backgroundTint="@color/custom_text_color"
            android:contentDescription="@string/edit_view"
            android:duplicateParentState="true"
            app:layout_constraintBottom_toTopOf="@+id/exercise_name"
            app:layout_constraintEnd_toStartOf="@+id/remove_view"
            app:layout_constraintHorizontal_bias="0.98"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>