<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="220dp"
    android:background="@drawable/delete_rename_workout_background"
    android:gravity="center"
    android:orientation="vertical"
    android:theme="@style/CustomAlertDialog">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/delete_exercise_dialog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:elevation="15dp"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/screeningDB_ask_dialog"
            android:textColor="@color/custom_text_color"
            android:textSize="18sp"
            android:textStyle="bold" />


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="16dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/cancel_details_screening"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="90dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:background="@color/custom_transparent"
                android:text="@string/cancel_button"
                android:textColor="@color/custom_text_color"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/verify_details_screening"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="90dp"
                android:layout_height="match_parent"
                android:layout_gravity="start"
                android:background="@color/custom_transparent"
                android:text="@string/ok_button"
                android:textColor="@color/custom_text_color"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

</LinearLayout>